load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude third_party
# gazelle:prefix github.com/wix-playground/tfChek
gazelle(
    name = "gazelle",
)


version = "0.9.5-bazel"
ver_data = version.split(".")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/wix-playground/tfChek",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@com_github_wix_system_tfresdif_v3//helpers:go_default_library",
    ],
    x_defs = {
            "github.com/wix-system/tfChek/main.MajorVersion": ver_data[0],
            "github.com/wix-system/tfChek/main.MinorVersion": ver_data[1],
            "github.com/wix-system/tfChek/main.Revision": ver_data[2]
            },
)

go_binary(
    name = "tfChek",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
