load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "manager.go",
        "utils.go",
    ],
    importpath = "github.com/wix-playground/tfChek/git",
    visibility = ["//visibility:public"],
    deps = [
        "//github:go_default_library",
        "//misc:go_default_library",
        "@com_github_go_git_go_git_v5//:go_default_library",
        "@com_github_go_git_go_git_v5//config:go_default_library",
        "@com_github_go_git_go_git_v5//plumbing:go_default_library",
        "@com_github_go_git_go_git_v5//plumbing/format/config:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "manager_test.go",
        "utils_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_go_git_go_git_v5//:go_default_library"],
)
