load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "downloader.go",
        "manager.go",
        "repomanager.go",
    ],
    importpath = "github.com/wix-playground/tfChek/github",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_go_github_v28//github:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@com_github_whilp_git_urls//:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["client_test.go"],
    embed = [":go_default_library"],
)
