load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logger.go"],
    importpath = "github.com/wix-playground/tfChek/tfChekLog",
    visibility = ["//visibility:public"],
    deps = ["@com_github_wix_system_tfresdif_v3//wtflog:go_default_library"],
)
